# master-thesis

./: .env  .env.caddy  .env.example  .env.preview  .env.production  .env.test  .gitignore  Caddyfile  Readme.md  bun.lockb  compose.caddy.yaml  compose.override.yaml  compose.test.yaml  compose.yaml  image-download-test.ts  insert_system_models.ps1  insert_system_models.sql  local.env  package.json  test_deploy.ps1
.github/workflows/: build.yml  create-server.yml  deploy-backend.yml  deploy-preview.yml  deploy-production.yml  deploy.yml  full-test.yml  load-test.yml  main.yml  preview.yml  production.yml  release.yml  rust-release.yml  stress-test.yml  stress_test.yml  validation.yml
ci-cd/: README.MD
ci-cd/bun/: backup.ts  package.json  upload.ts
ci-cd/docker/: deploy.sh
ci-cd/nixos/: configuration.nix  copy.ssh-keys  create-server.sh  remote-rebuild.ps1  remote-rebuild.sh  remote-update-ssh.ps1  remote-update.ps1  remote-update.sh  ssh-keys.nix  ssh-keys.nix.placeholder
ci-cd/postgres/: backup.sh
ci-cd/rclone/: README.MD
ci-cd/test_framework/: README.MD  load_test.js  load_test_local.js  requirements.txt  scaling_test.py
deploy/preview/: compose.yaml
e2e/: .gitignore  Readme.md  bun.lockb  package.json  playwright.config.ts
services/ingest/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
services/ingest/src/: api.rs  cli.rs  config.rs  event_bus.rs  example.env  hardware_monitor_reader.rs  local_queue.rs  main.rs  module.rs  modules.rs  reader.rs  reading.rs
services/ingest/src/client/: config.rs  local_queue.rs  main.rs
services/ingest/src/modules/: docker.rs  logger.rs  monitoring.rs  opcua.rs  uploader.rs
services/ingest/src/server/: main.rs  time_helper.rs
(+580 files in other folders)
