[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.86"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.204"
wmi = "0.13.3"

sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
clap = {version = "4.5.9", features = ["derive", "env"]}



[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

